:recycle: code cleanup